--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
-@import url("https://fonts.googleapis.com/css?family=Raleway:100,600");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap");
 /*
 * Crystal - Bootstrap 4 Template
 * Build Date: August 2017
@@ -76,7 +76,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 40px;
   font-weight: 100;
   letter-spacing: 1px;
@@ -162,7 +162,7 @@ a:not([href]):not([tabindex]):hover {
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
   display: inline-block;
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .btn:focus,
 .btn:active {
@@ -479,7 +479,7 @@ button:focus {
   position: relative;
 }
 .navbar-brand img {
-  max-width: 80px;
+  max-width: 200px;
 }
 .navbar-expand-md .navbar-nav .nav-link:focus,
 .navbar-expand-md .navbar-nav .nav-link:hover,
@@ -1266,7 +1266,7 @@ button:focus {
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .form-control:focus {
   color: none !important;
@@ -1380,7 +1380,7 @@ button:focus {
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
   cursor: pointer;
 }
 /* ==========================================================================
@@ -1433,7 +1433,7 @@ footer {
   -moz-transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto", sans-serif;
   cursor: pointer;
 }
 /* ==========================================================================
