--- a/css/main.css
+++ b/css/main.css
@@ -940,6 +940,10 @@ button:focus {
 /* ==========================================================================
 	11. Pricing Table
 	========================================================================== */
+#blog {
+  background: #f2f2f2;
+}
+
 .pricing-table {
   padding: 20px 20px 40px 20px;
   margin: 0 auto;
