--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,9 @@ a:not([href]):not([tabindex]):hover {
 /* ==========================================================================
    2.2 Buttons
    ========================================================================== */
+#more {
+  display: none;
+}
 .btn {
   font-size: 14px;
   padding: 10px 30px;
